Implement JWT authentication, authorization, Swagger config and secured API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.username=fitnes_user
 spring.datasource.password=Fitness123!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+
+app.jwt.secret=123456789
+
+
+spring.jpa.hibernate.ddl-auto=create
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
