Docker setup using env variables

--- a/backend/src/main/resources/application-docker.properties
+++ b/backend/src/main/resources/application-docker.properties
@@ -6,6 +6,11 @@ spring.datasource.url=jdbc:sqlserver://db:1433;databaseName=fitnesscenter;encryp
 spring.datasource.username=fitnes_user
 spring.datasource.password=Fitness123!
 
+stripe.secret.key=${STRIPE_SECRET_KEY}
+stripe.publishable.key=${STRIPE_PUBLISHABLE_KEY}
+
+
+
 # JPA / HIBERNATE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
