--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,20 @@
 services:
-  db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: fitnesscenter-db
-    environment:
-      ACCEPT_EULA: "Y"
-      MSSQL_SA_PASSWORD: "YourStrong!Passw0rd"
-    ports:
-      - "1433:1433"
-    volumes:
-      - mssql_data:/var/opt/mssql
-      - ./docker/mssql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    healthcheck:
-      test: ["CMD-SHELL", "/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P 'YourStrong!Passw0rd' -Q 'SELECT 1' -C || exit 1"]
-      interval: 10s
-      timeout: 5s
-      retries: 30
-
   backend:
     build:
       context: ./backend
     container_name: fitnesscenter-backend
-    depends_on:
-      db:
-        condition: service_healthy
     environment:
-      SPRING_PROFILES_ACTIVE: docker
+        SPRING_PROFILES_ACTIVE: docker
+        SPRING_DATASOURCE_URL: "jdbc:sqlserver://host.docker.internal:1433;databaseName=FitnessCenter;encrypt=true;trustServerCertificate=true"
+
+
+        SPRING_DATASOURCE_USERNAME: "fitnes_user"
+        SPRING_DATASOURCE_PASSWORD: "Fitness123!"
+
+        STRIPE_SECRET_KEY: ${STRIPE_SECRET_KEY}
+
+        STRIPE_PUBLIC_KEY: "pk_test_51PKe2eP8SXzhG2woN1Hps7qJYo5DmiyTUhLn8Mp3EmwaXF1RFYtdxL2ujUecwVjK0fAHDpx8u8MDMYwcFXbiGOH5007fr22yEs"
+
     ports:
       - "8082:8082"
 
@@ -36,6 +26,3 @@ services:
       - backend
     ports:
       - "5173:80"
-
-volumes:
-  mssql_data:
